api/k8s/svc_clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: blockexplorer
  name: blockexplorer
  selfLink: /api/v1/namespaces/default/services/blockexplorer
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    run: blockexplorer
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
