api/k8s/svc_nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: blockexplorer
  name: blockexplorer-nodeport
  selfLink: /api/v1/namespaces/default/services/blockexplorer
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      nodePort: 31000
  selector:
    run: blockexplorer
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
